--- a/task4_a3c_cnn/a3c_cnn_ani.ipynb
+++ b/task4_a3c_cnn/a3c_cnn_ani.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "developed-storage",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "ancient-reading",
    "metadata": {},
    "outputs": [
     {
@@ -28071,7 +28069,6 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "cutting-angel",
    "metadata": {},
    "outputs": [
     {
@@ -30083,7 +30080,6 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "corrected-latter",
    "metadata": {},
    "outputs": [
     {
@@ -30123,7 +30119,6 @@
   {
    "cell_type": "code",
    "execution_count": 511,
-   "id": "random-jungle",
    "metadata": {},
    "outputs": [
     {
@@ -31576,7 +31571,6 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "level-strain",
    "metadata": {},
    "outputs": [
     {
@@ -31594,7 +31588,6 @@
   {
    "cell_type": "code",
    "execution_count": 501,
-   "id": "alternative-surrey",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31604,7 +31597,6 @@
   {
    "cell_type": "code",
    "execution_count": 473,
-   "id": "sensitive-verse",
    "metadata": {},
    "outputs": [
     {
@@ -31630,7 +31622,6 @@
   {
    "cell_type": "code",
    "execution_count": 500,
-   "id": "precious-madness",
    "metadata": {},
    "outputs": [
     {
@@ -31653,7 +31644,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wicked-ocean",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31663,7 +31653,6 @@
   {
    "cell_type": "code",
    "execution_count": 707,
-   "id": "instructional-reconstruction",
    "metadata": {},
    "outputs": [
     {
@@ -32706,7 +32695,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "immediate-riverside",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -32714,9 +32702,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyCharm (RL-coursework)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pycharm-dcd238a4"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -32728,7 +32716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
