--- a/task2_qlearning_tiancheng_wang.ipynb
+++ b/task2_qlearning_tiancheng_wang.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 552,
-   "id": "native-graduation",
+   "id": "vietnamese-welcome",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "essential-button",
+   "id": "representative-october",
    "metadata": {},
    "source": [
     "# Animation presentation"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "selected-sacrifice",
+   "id": "breeding-repository",
    "metadata": {},
    "source": [
     "hard mode"
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "composed-challenge",
+   "id": "orange-johns",
    "metadata": {},
    "source": [
     "load q table, may take a few seconds"
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 555,
-   "id": "controversial-botswana",
+   "id": "christian-eagle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "experienced-world",
+   "id": "ranging-account",
    "metadata": {},
    "source": [
     "initiate game and assign to advance poliy to the enemy 'blinky'"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 556,
-   "id": "ideal-recording",
+   "id": "unavailable-window",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "healthy-pride",
+   "id": "unexpected-rally",
    "metadata": {},
    "source": [
     "Generate animation, please run a few times to see how agent perform generally, the two cells above only needs to be run once\n",
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 557,
-   "id": "solved-honey",
+   "id": "outstanding-abuse",
    "metadata": {},
    "outputs": [
     {
@@ -5706,7 +5706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "twenty-applicant",
+   "id": "innocent-easter",
    "metadata": {},
    "source": [
     "easy mode"
@@ -5715,7 +5715,7 @@
   {
    "cell_type": "code",
    "execution_count": 524,
-   "id": "therapeutic-player",
+   "id": "incorporated-resort",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5725,7 +5725,7 @@
   {
    "cell_type": "code",
    "execution_count": 525,
-   "id": "extreme-valve",
+   "id": "growing-nickel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5735,7 +5735,7 @@
   {
    "cell_type": "code",
    "execution_count": 526,
-   "id": "inside-level",
+   "id": "dental-absorption",
    "metadata": {},
    "outputs": [
     {
@@ -20235,7 +20235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "equipped-australian",
+   "id": "solid-treaty",
    "metadata": {},
    "source": [
     "# Workflow of task 2 Q-learning from below"
@@ -20243,7 +20243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caroline-screw",
+   "id": "sound-fiction",
    "metadata": {},
    "source": [
     "# Set up\n",
@@ -20253,7 +20253,7 @@
   {
    "cell_type": "code",
    "execution_count": 318,
-   "id": "southern-century",
+   "id": "ecological-rebel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20262,7 +20262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comfortable-guarantee",
+   "id": "bulgarian-animal",
    "metadata": {},
    "source": [
     "Initiate game"
@@ -20271,7 +20271,7 @@
   {
    "cell_type": "code",
    "execution_count": 319,
-   "id": "communist-humanitarian",
+   "id": "attractive-safety",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20280,7 +20280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "photographic-elimination",
+   "id": "liberal-glenn",
    "metadata": {},
    "source": [
     "# Training"
@@ -20288,7 +20288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "apparent-desktop",
+   "id": "hindu-serbia",
    "metadata": {},
    "source": [
     "start training with hyper-parameters, training function with return \n",
@@ -20301,7 +20301,7 @@
   {
    "cell_type": "code",
    "execution_count": 320,
-   "id": "accessible-spyware",
+   "id": "smaller-arnold",
    "metadata": {},
    "outputs": [
     {
@@ -20329,7 +20329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "floral-huntington",
+   "id": "cosmetic-bottom",
    "metadata": {},
    "source": [
     "# Evaluation\n",
@@ -20340,7 +20340,7 @@
   {
    "cell_type": "code",
    "execution_count": 321,
-   "id": "color-thermal",
+   "id": "martial-toolbox",
    "metadata": {},
    "outputs": [
     {
@@ -20367,7 +20367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "buried-scientist",
+   "id": "powerful-rabbit",
    "metadata": {},
    "source": [
     "This is the plot of evaluation rewards. We can clearly see the improvement."
@@ -20376,7 +20376,7 @@
   {
    "cell_type": "code",
    "execution_count": 322,
-   "id": "universal-merchandise",
+   "id": "foster-steam",
    "metadata": {},
    "outputs": [
     {
@@ -20403,7 +20403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "explicit-semiconductor",
+   "id": "upset-bench",
    "metadata": {},
    "source": [
     "This is the plot of mean living time of the agent in each game during each evaluatition. Again we can see improvement clearly."
@@ -20412,7 +20412,7 @@
   {
    "cell_type": "code",
    "execution_count": 323,
-   "id": "american-vienna",
+   "id": "unlike-queen",
    "metadata": {},
    "outputs": [
     {
@@ -20439,7 +20439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "statewide-execution",
+   "id": "amber-seminar",
    "metadata": {},
    "source": [
     "The plot of total wins of each evaluation (out of 100 games as set above in the training function argument)"
@@ -20448,7 +20448,7 @@
   {
    "cell_type": "code",
    "execution_count": 324,
-   "id": "informative-daily",
+   "id": "southwest-compiler",
    "metadata": {},
    "outputs": [
     {
@@ -20476,7 +20476,7 @@
   {
    "cell_type": "code",
    "execution_count": 328,
-   "id": "historical-shipping",
+   "id": "resistant-school",
    "metadata": {},
    "outputs": [
     {
@@ -20494,7 +20494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "following-quantum",
+   "id": "legal-azerbaijan",
    "metadata": {},
    "source": [
     "save q table"
@@ -20503,7 +20503,7 @@
   {
    "cell_type": "code",
    "execution_count": 329,
-   "id": "forbidden-bailey",
+   "id": "pressing-lingerie",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20512,7 +20512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "binding-contrary",
+   "id": "iraqi-costs",
    "metadata": {},
    "source": [
     "check if q table is successfully saved"
@@ -20521,7 +20521,7 @@
   {
    "cell_type": "code",
    "execution_count": 330,
-   "id": "exclusive-enterprise",
+   "id": "median-harvest",
    "metadata": {},
    "outputs": [
     {
@@ -20541,7 +20541,7 @@
   {
    "cell_type": "code",
    "execution_count": 331,
-   "id": "useful-ethnic",
+   "id": "elementary-server",
    "metadata": {},
    "outputs": [
     {
@@ -20561,7 +20561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "configured-enzyme",
+   "id": "public-quantum",
    "metadata": {},
    "source": [
     "# Compare with relative state representation\n",
@@ -20572,7 +20572,7 @@
   {
    "cell_type": "code",
    "execution_count": 386,
-   "id": "eight-gnome",
+   "id": "focal-strand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20583,7 +20583,7 @@
   {
    "cell_type": "code",
    "execution_count": 387,
-   "id": "double-mapping",
+   "id": "public-handbook",
    "metadata": {},
    "outputs": [
     {
@@ -20612,7 +20612,7 @@
   {
    "cell_type": "code",
    "execution_count": 399,
-   "id": "located-malaysia",
+   "id": "dominant-alloy",
    "metadata": {},
    "outputs": [
     {
@@ -20640,7 +20640,7 @@
   {
    "cell_type": "code",
    "execution_count": 400,
-   "id": "brilliant-active",
+   "id": "sticky-miami",
    "metadata": {},
    "outputs": [
     {
@@ -20668,7 +20668,7 @@
   {
    "cell_type": "code",
    "execution_count": 401,
-   "id": "continuing-large",
+   "id": "related-norman",
    "metadata": {},
    "outputs": [
     {
@@ -20696,7 +20696,7 @@
   {
    "cell_type": "code",
    "execution_count": 404,
-   "id": "technical-knitting",
+   "id": "prompt-generic",
    "metadata": {},
    "outputs": [
     {
@@ -20715,7 +20715,7 @@
   {
    "cell_type": "code",
    "execution_count": 403,
-   "id": "moved-hebrew",
+   "id": "protective-negative",
    "metadata": {},
    "outputs": [
     {
@@ -20736,7 +20736,7 @@
   {
    "cell_type": "code",
    "execution_count": 393,
-   "id": "optimum-authorization",
+   "id": "enhanced-genius",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20746,7 +20746,7 @@
   {
    "cell_type": "code",
    "execution_count": 394,
-   "id": "personalized-campaign",
+   "id": "frank-purpose",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20756,7 +20756,7 @@
   {
    "cell_type": "code",
    "execution_count": 395,
-   "id": "deadly-orientation",
+   "id": "dying-rough",
    "metadata": {},
    "outputs": [
     {
@@ -20775,7 +20775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ranging-liberia",
+   "id": "plain-mexico",
    "metadata": {},
    "source": [
     "### Conclusion\n",
@@ -20785,7 +20785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "advisory-pollution",
+   "id": "wrapped-relations",
    "metadata": {},
    "source": [
     "# Fine tuning hyper parameter alpha, gamma and epsilon"
@@ -20794,7 +20794,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "smoking-address",
+   "id": "super-ribbon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20805,7 +20805,7 @@
   {
    "cell_type": "code",
    "execution_count": 469,
-   "id": "damaged-process",
+   "id": "handled-visit",
    "metadata": {},
    "outputs": [
     {
@@ -20820,13 +20820,13 @@
     "alpha_range = np.linspace(0.05, 0.1, 2)\n",
     "gamma_range = np.linspace(0.9, 1, 2)\n",
     "epsilon_range = np.linspace(0.05, 0.1, 2)\n",
-    "print(alpha_range, gamma_range, epsilon)"
+    "print(alpha_range, gamma_range, epsilon_range)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 471,
-   "id": "indie-privacy",
+   "id": "three-elder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20836,7 +20836,7 @@
   {
    "cell_type": "code",
    "execution_count": 477,
-   "id": "solved-despite",
+   "id": "exempt-exclusion",
    "metadata": {},
    "outputs": [
     {
@@ -20871,7 +20871,7 @@
   {
    "cell_type": "code",
    "execution_count": 478,
-   "id": "searching-hayes",
+   "id": "resistant-picnic",
    "metadata": {},
    "outputs": [
     {
@@ -20896,7 +20896,7 @@
   {
    "cell_type": "code",
    "execution_count": 488,
-   "id": "residential-ministry",
+   "id": "interested-italy",
    "metadata": {},
    "outputs": [
     {
@@ -20923,7 +20923,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "express-principal",
+   "id": "existing-responsibility",
    "metadata": {},
    "source": [
     "The best hypyter paramters for early stage training are alpha 0.05, gamma 1.0 epsilon 0.1 in this comparison."
@@ -20931,7 +20931,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "planned-bibliography",
+   "id": "interpreted-meaning",
    "metadata": {},
    "source": [
     "# Would it work to use the same Q table for the harder mode?\n",
@@ -20945,7 +20945,7 @@
   {
    "cell_type": "code",
    "execution_count": 499,
-   "id": "annoying-component",
+   "id": "rolled-textbook",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20956,7 +20956,7 @@
   {
    "cell_type": "code",
    "execution_count": 492,
-   "id": "sticky-presence",
+   "id": "historical-insight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20965,7 +20965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "neither-startup",
+   "id": "advisory-bankruptcy",
    "metadata": {},
    "source": [
     "It seems to work even though the performance drop significantly."
@@ -20974,7 +20974,7 @@
   {
    "cell_type": "code",
    "execution_count": 496,
-   "id": "magnetic-lexington",
+   "id": "innocent-envelope",
    "metadata": {},
    "outputs": [
     {
@@ -20993,7 +20993,7 @@
   {
    "cell_type": "code",
    "execution_count": 497,
-   "id": "capital-motorcycle",
+   "id": "ranking-sterling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21002,7 +21002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "limiting-season",
+   "id": "analyzed-fountain",
    "metadata": {},
    "source": [
     "The relative state representation policy also works, the performance is slightly lower than the simple state policy."
@@ -21011,7 +21011,7 @@
   {
    "cell_type": "code",
    "execution_count": 498,
-   "id": "light-armenia",
+   "id": "powered-cathedral",
    "metadata": {},
    "outputs": [
     {
@@ -21029,7 +21029,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "operating-hydrogen",
+   "id": "north-carbon",
    "metadata": {},
    "source": [
     "### training from sctrach for the harder mode"
@@ -21038,7 +21038,7 @@
   {
    "cell_type": "code",
    "execution_count": 500,
-   "id": "monetary-boxing",
+   "id": "stretch-inspection",
    "metadata": {},
    "outputs": [
     {
@@ -21067,7 +21067,7 @@
   {
    "cell_type": "code",
    "execution_count": 503,
-   "id": "national-certificate",
+   "id": "union-mozambique",
    "metadata": {},
    "outputs": [
     {
@@ -21095,7 +21095,7 @@
   {
    "cell_type": "code",
    "execution_count": 502,
-   "id": "tough-narrow",
+   "id": "requested-dividend",
    "metadata": {},
    "outputs": [
     {
@@ -21113,7 +21113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suspected-conservation",
+   "id": "cardiac-ghana",
    "metadata": {},
    "source": [
     "The performance is still increasting at the same speed, would be interesting to see what the performance will be after training another 50000 steps"
@@ -21122,7 +21122,7 @@
   {
    "cell_type": "code",
    "execution_count": 504,
-   "id": "improved-pharmacy",
+   "id": "bored-camping",
    "metadata": {},
    "outputs": [
     {
@@ -21150,7 +21150,7 @@
   {
    "cell_type": "code",
    "execution_count": 505,
-   "id": "welcome-specification",
+   "id": "historical-horse",
    "metadata": {},
    "outputs": [
     {
@@ -21178,7 +21178,7 @@
   {
    "cell_type": "code",
    "execution_count": 506,
-   "id": "atmospheric-interest",
+   "id": "atmospheric-birthday",
    "metadata": {},
    "outputs": [
     {
@@ -21197,7 +21197,7 @@
   {
    "cell_type": "code",
    "execution_count": 507,
-   "id": "affected-guidance",
+   "id": "enhanced-report",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21207,7 +21207,7 @@
   {
    "cell_type": "code",
    "execution_count": 508,
-   "id": "orange-waterproof",
+   "id": "offshore-equilibrium",
    "metadata": {},
    "outputs": [
     {
@@ -21226,7 +21226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informational-fitting",
+   "id": "monthly-craft",
    "metadata": {},
    "source": [
     "Conclusion\n",
