Fix task4 ipynb plt import

--- a/task4_a3c_cnn.ipynb
+++ b/task4_a3c_cnn.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "periodic-quality",
+   "execution_count": 149,
+   "id": "christian-sequence",
    "metadata": {},
    "outputs": [
     {
@@ -23,6 +23,7 @@
     "import os\n",
     "import torch\n",
     "import functools\n",
+    "import matplotlib.pyplot as plt\n",
     "from IPython.display import HTML\n",
     "from task1_environment.environment.main import PacMan\n",
     "from task1_environment.policy.baseline import blinky_policy\n",
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "transparent-testing",
+   "id": "fiscal-state",
    "metadata": {},
    "source": [
     "# Animation presentation\n",
@@ -44,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "harmful-marine",
+   "id": "imperial-region",
    "metadata": {},
    "outputs": [
     {
@@ -13814,7 +13815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "floating-alloy",
+   "id": "cultural-recall",
    "metadata": {},
    "source": [
     "Check win rate"
@@ -13823,7 +13824,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "useful-geneva",
+   "id": "bacterial-typing",
    "metadata": {},
    "outputs": [
     {
@@ -13841,7 +13842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fixed-series",
+   "id": "pursuant-lending",
    "metadata": {},
    "source": [
     "hard mode presentation"
@@ -13850,7 +13851,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "ahead-disease",
+   "id": "major-immigration",
    "metadata": {},
    "outputs": [
     {
@@ -18315,7 +18316,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "ignored-boating",
+   "id": "julian-equipment",
    "metadata": {},
    "outputs": [
     {
@@ -18333,7 +18334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hollywood-rubber",
+   "id": "nominated-cinema",
    "metadata": {},
    "source": [
     "# Method\n",
@@ -18344,7 +18345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "realistic-pressure",
+   "id": "wrapped-scout",
    "metadata": {},
    "source": [
     "create a new a game to illustrate"
@@ -18353,7 +18354,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "broke-usage",
+   "id": "confused-backup",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18362,7 +18363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "selected-newport",
+   "id": "junior-mention",
    "metadata": {},
    "source": [
     "this the image when the game starts, lets see what the agent will see after pre-processing."
@@ -18371,7 +18372,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "authorized-portable",
+   "id": "dominican-kruger",
    "metadata": {},
    "outputs": [
     {
@@ -18393,7 +18394,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "altered-business",
+   "id": "confidential-dictionary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18403,7 +18404,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "korean-trainer",
+   "id": "retired-manhattan",
    "metadata": {},
    "outputs": [
     {
@@ -18440,7 +18441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "useful-seventh",
+   "id": "consistent-candy",
    "metadata": {},
    "source": [
     "CNN network is capable of looking at different channels of the same image at the same time, so we utilise this capability to transform our input image to 9 channels even though the origin image only has one channel. These channels represent different information as showing in the title. Let's run the games for 10 steps and see how these channels change."
@@ -18449,7 +18450,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "junior-colony",
+   "id": "forward-spending",
    "metadata": {},
    "outputs": [
     {
@@ -18477,8 +18478,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "id": "distinguished-manufacturer",
+   "execution_count": 151,
+   "id": "interracial-pickup",
    "metadata": {},
    "outputs": [
     {
@@ -18505,7 +18506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "jewish-gather",
+   "id": "clear-poultry",
    "metadata": {},
    "source": [
     "The illustration of task 4 ends. For training script, please see `./task4_a3c_cnn/train.py`. For the performance of the model, please see the win rate check and animation generation above."
